# Stable-Diffusion-ComfyUI-for-Laerdal-Style-Image-Generation-Master-s-Thesis-

./: README.md
Dataset/SD-v-1.5/1_trainimages/: 1.txt  10.txt  100.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+58 more)
Dataset/SDXL-v-1.0/1_Images/: metadata.jsonl
LaerdalStyle_Lora/Kohya_Lora/: Lora_config.json
LaerdalStyle_Lora/Kohya_Lora/Inference/: SDv.15_inference.py  Sample_Argument.txt  pyproject.toml
LaerdalStyle_Lora/Kohya_Lora/Inference/Inference_Output/: image_20250524_213338.json
LaerdalStyle_Lora/Python_script/SD-v-1.5/: Lora_train.py  pyproject.toml
LaerdalStyle_Lora/Python_script/SD-v-1.5/Inference/: SD_v_1.5_LoRa_inference.py  Sample_argument_for _Inference.txt  pyproject.toml
LaerdalStyle_Lora/Python_script/SD-v-1.5/Inference/Inference Output/: image_20250605_141014.json
LaerdalStyle_Lora/Python_script/SDXL_v1.0/: Sample_Argument_for_training.txt  pyproject.toml  train_SDXL_LoRa.py
LaerdalStyle_Lora/Python_script/SDXL_v1.0/Inference/: SDXL_LoRa_inference.py  pyproject.toml
LaerdalStyle_Lora/Python_script/SDXL_v1.0/Inference/Inference_Output/: image_20250605_151713.json
Presentation/: FIRST PRESENTATION.pptx
Workflow/Image2Sketch/: IMAGE2SKETCH.json
Workflow/Inpainting/: INPAINTING (1).json  INPAINTING.json
Workflow/Outpainting/: OUTPAINTING.json
Workflow/SDXL/Image To Image/: Image_to_Image.json
Workflow/SDXL/Text To Image/: Text to Image.json
Workflow/SD_v_1.5 Workflows/Image to Image/: Image to Image.json
Workflow/SD_v_1.5 Workflows/Text to image/: text_to_image.json
