[project]
name = "lora-scripts"
version = "0.1.0"
description = "training"
authors = [
    { name = "Md Safin Sarker", email = "safinsarker1122@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "markupsafe>=2.1.3",
    "transformers",
    "accelerate",
    "safetensors",
    "torchvision (>=0.17.1,<0.18.0)",
    "peft @ git+https://github.com/huggingface/peft.git",
    "wandb (>=0.19.9,<0.20.0)",
    "numpy (>=1.24,<2.0)",
    "diffusers (==0.33.1)"
]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"

[tool.poetry.dependencies]
torchvision = {source = "pytorch-cu121"}
