[project]
name = "sdxl-v1-0"
version = "0.1.0"
description = ""
authors = [
    {name = "Md Safin Sarker",email = "safinsarker1122@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets (>=3.6.0,<4.0.0)",
    "accelerate ( ==0.32.0)",
    "transformers >=4.39.0,<5.0.0",
    "peft (==0.10.0)",
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "diffusers (>=0.33.1,<0.34.0)"
]

[tool.poetry]
packages = [{include = "sdxl_v1"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
