[project]
name = "inference"
version = "0.1.0"
description = ""
authors = [
    {name = "Md Safin Sarker",email = "safinsarker1122@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "transformers (>=4.35.0,<5.0.0)",
    "diffusers (==0.33.1)",
    "huggingface-hub (>=0.20.2)",
    "numpy (<2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
