[project]
name = "inference"
version = "0.1.0"
description = ""
authors = [
    {name = "Md Safin Sarker",email = "safinsarker1122@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "diffusers (>=0.33.1,<0.34.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "accelerate (>=1.7.0,<2.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "peft (>=0.15.2,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
